add new website from server na

--- a/xem-phim-bo/ban-trai-di-thue/index.html
+++ b/xem-phim-bo/ban-trai-di-thue/index.html
@@ -1188,7 +1188,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             14
+             15
             </dd>
             <br/>
            </dl>
@@ -1549,7 +1549,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lust, Caution
             </span>
             <span class="list-top-movie-item-view">
-             65 lượt xem
+             67 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1571,31 +1571,9 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Dragon Hunting.Soul Suppressing Coffin
             </span>
             <span class="list-top-movie-item-view">
-             62 lượt xem
+             63 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Brothers For Life (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             53 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
             </span>
            </div>
           </a>
@@ -1615,7 +1593,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             51 lượt xem
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1623,21 +1601,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
            <span class="status">
-            FHD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
+             Hùng Long Phong Bá (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             The Blood of Youth
+             Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             51 lượt xem
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tang-hai-hoa" title="Tạng Hải Hoa">
+           <span class="status">
+            Vietsub - HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tang-hai-hoa-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tạng Hải Hoa
+            </span>
+            <span class="list-top-movie-item-en">
+             Adventure Behind the Bronze Door
+            </span>
+            <span class="list-top-movie-item-view">
+             53 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1658,18 +1658,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bi-mat-gioi-the-thao-giao-keo-voi-quy" title="Bí mật giới thể thao: Giao kèo với quỷ">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-tuong-lai" title="Cuộc Chiến Tương Lai">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-mat-gioi-the-thao-giao-keo-voi-quy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-tuong-lai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bí mật giới thể thao: Giao kèo với quỷ
+             Cuộc Chiến Tương Lai
             </span>
             <span class="list-top-movie-item-en">
-             Untold: Deal With the Devil
+             The Tomorrow War
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1680,40 +1680,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khach-san-de-vuong" title="Khách Sạn Đế Vương">
+          <a class="list-top-movie-link" href="/phim-moi/khi-yeu" title="Khi Yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khach-san-de-vuong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khách Sạn Đế Vương
+             Khi Yêu
             </span>
             <span class="list-top-movie-item-en">
-             The Grand Budapest Hotel
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hay-noi-cho-toi-dieu-uoc-cua-ban" title="Hãy Nói Cho Tôi Điều Ước Của Bạn">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hay-noi-cho-toi-dieu-uoc-cua-ban-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hãy Nói Cho Tôi Điều Ước Của Bạn
-            </span>
-            <span class="list-top-movie-item-en">
-             If You Wish Upon Me
+             Heavenly Forest
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1724,18 +1702,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ky-nghi-dac-biet-cua-ve-binh-dai-ngan-ha" title="Kỳ Nghỉ Đặc Biệt Của Vệ Binh Dải Ngân Hà">
+          <a class="list-top-movie-link" href="/phim-moi/nguyen-uoc" title="Nguyện Ước">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-nghi-dac-biet-cua-ve-binh-dai-ngan-ha-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguyen-uoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kỳ Nghỉ Đặc Biệt Của Vệ Binh Dải Ngân Hà
+             Nguyện Ước
             </span>
             <span class="list-top-movie-item-en">
-             The Guardians of the Galaxy Holiday Special
+             Now Is Good
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-ban-tuong-tuong" title="Người Bạn Tưởng Tượng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-ban-tuong-tuong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Người Bạn Tưởng Tượng
+            </span>
+            <span class="list-top-movie-item-en">
+             Daniel Isn't Real
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1746,18 +1746,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chao-ninja-phan-1" title="Chào Ninja (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/pet-sematary" title="Pet Sematary">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-ninja-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pet-sematary-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chào Ninja (Phần 1)
+             Pet Sematary
             </span>
             <span class="list-top-movie-item-en">
-             Hello Ninja (Season 1)
+             Pet Sematary
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
