add new website from server na

--- a/xem-phim-bo/ban-trai-di-thue/index.html
+++ b/xem-phim-bo/ban-trai-di-thue/index.html
@@ -1188,7 +1188,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             15
+             16
             </dd>
             <br/>
            </dl>
@@ -1658,84 +1658,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-tuong-lai" title="Cuộc Chiến Tương Lai">
+          <a class="list-top-movie-link" href="/phim-moi/bat-dau-lam-minh-tinh-tu-hom-nay-thien-su-tinh-ca" title="Bắt Đầu Làm Minh Tinh Từ Hôm Nay: Thiên Sứ Tình Ca">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-tuong-lai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bat-dau-lam-minh-tinh-tu-hom-nay-thien-su-tinh-ca-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc Chiến Tương Lai
+             Bắt Đầu Làm Minh Tinh Từ Hôm Nay: Thiên Sứ Tình Ca
             </span>
             <span class="list-top-movie-item-en">
-             The Tomorrow War
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khi-yeu" title="Khi Yêu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-yeu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Khi Yêu
-            </span>
-            <span class="list-top-movie-item-en">
-             Heavenly Forest
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguyen-uoc" title="Nguyện Ước">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguyen-uoc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nguyện Ước
-            </span>
-            <span class="list-top-movie-item-en">
-             Now Is Good
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-ban-tuong-tuong" title="Người Bạn Tưởng Tượng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-ban-tuong-tuong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Người Bạn Tưởng Tượng
-            </span>
-            <span class="list-top-movie-item-en">
-             Daniel Isn't Real
+             Super Star：Love Song
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1746,21 +1680,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pet-sematary" title="Pet Sematary">
+          <a class="list-top-movie-link" href="/phim-moi/ky-nguyen-tan-bao" title="Kỷ Nguyên Tàn Bạo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pet-sematary-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-nguyen-tan-bao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Pet Sematary
+             Kỷ Nguyên Tàn Bạo
             </span>
             <span class="list-top-movie-item-en">
-             Pet Sematary
+             Kundo: Age of the Rampant
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tan-luong-son-ba-chuc-anh-dai" title="Tân Lương Sơn Bá – Chúc Anh Đài">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-luong-son-ba-chuc-anh-dai-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tân Lương Sơn Bá – Chúc Anh Đài
+            </span>
+            <span class="list-top-movie-item-en">
+             Butterfly Lovers
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vikrant-rona" title="Vikrant Rona">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vikrant-rona-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vikrant Rona
+            </span>
+            <span class="list-top-movie-item-en">
+             Vikrant Rona
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-song-hoc-duong" title="Cuộc sống học đường">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-song-hoc-duong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cuộc sống học đường
+            </span>
+            <span class="list-top-movie-item-en">
+             School Life
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
